[package]
name = "rust_play_ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6.4"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1", features = ["full"] }